[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["kassas20 <kassas20@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"
pydantic = "^2.6.4"
bcrypt = "^4.1.2"
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
